# Play-Dependencies

build_cmake/ghc_filesystem/: CMakeLists.txt
cmake-modules/: Header.cmake
